; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_state_fetch_final_resp.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_state_fetch_final_resp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }

@CURLE_OK = common dso_local global i32 0, align 4
@IMAP_RESP_OK = common dso_local global i32 0, align 4
@CURLE_WEIRD_SERVER_REPLY = common dso_local global i32 0, align 4
@IMAP_STOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, i32, i32)* @imap_state_fetch_final_resp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imap_state_fetch_final_resp(%struct.connectdata* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.connectdata*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.connectdata* %0, %struct.connectdata** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @CURLE_OK, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @IMAP_RESP_OK, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @CURLE_WEIRD_SERVER_REPLY, align 4
  store i32 %14, i32* %7, align 4
  br label %19

15:                                               ; preds = %3
  %16 = load %struct.connectdata*, %struct.connectdata** %4, align 8
  %17 = load i32, i32* @IMAP_STOP, align 4
  %18 = call i32 @state(%struct.connectdata* %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %13
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32 @state(%struct.connectdata*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
